Add a simple command line interface
This commit adds a command-line executable (also called `orc`).
The `orc` tool will be used to provide command-line manipulation
of Registers using the library, and be a lower barrier to entry
for developers wanting to use the Registers ecosystem.

`orc` can be invoked with `-h` or `--help` to print usage.

== Installing
`orc` will be installed with the library when building the `orc`
egg using `chicken-install` from this directory,
`chicken-install orc` from elsewhere, or when installing `orc` as
an egg dependency of another application.

== Backing stores
Like the library, the CLI uses a backing store to store Registers.
Registers will first need to be read into the backing store before
they can be manipulated. Using a backing store allows `orc` to
provide its various features in a performant manner.

Backing stores should be invisible to most users. The key piece of
knowledge is that `orc` will use "./orc.register-store" as a
backing store by default, and will create this file if it doesn't
exist. This means that any Registers loaded and manipulated are
directory-local by default. Choosing a different backing store
can be done using the `-S` option to `orc`.

Signed-off-by: Simon Worthington <simon@register-dynamics.co.uk>

--- a/README
+++ b/README
@@ -46,6 +46,13 @@
             store them persistently, update the entries in the Register,
             and compute proofs and digests on the data.
 
+          + `orc` command line tool
+
+            The command line tool exposes the functionality of the library
+            on the command line. The tool can read from either Register
+            Serialisation Format (RSF) files or orc internal databases,
+            and can list and modify Register entries and items.
+
  3. Usage
 
   The library can be included in a CHICKEN Scheme environment by using
@@ -60,7 +67,8 @@
   A backing store can be opened with `open-backing-store` which will
   either open an existing file or create one if it does not exist. If
   the backing store is new, it must also be initialised with
-  `initialise-backing-store`.
+  `initialise-backing-store`. Stores can also be created and initialised
+  automatically by passing the `-S` option to the command line tool.
 
   Once a backing store has been opened, library calls can be made inside
   a call to `with-backing-store`.
@@ -139,6 +147,11 @@
   with a passed internal name.
 
   There is not currently any support for writing to RSF files.
+
+  3.X Command line tool
+
+  The `orc` command line tool can be invoked with the `--help` switch
+  to print full usage information.
 
  4. Compatibility notes
 
